Add upload function

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :serial_number, id: :user_serial_number %>
   </div>
 
+  <div class="field">
+    <%= form.label :token %>
+    <%= form.text_field :token, id: :token %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
