Add user checking

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,3 +29,10 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+
+<%= form_tag({action: :create, controller: :batch_users, method: 'POST'}, multipart: true) do %>
+  <%= file_field_tag 'users' %>
+  <div class="actions">
+    <%= submit_tag 'Upload Batch' %>
+  </div>
+<% end %>
