--- a/app/views/batch_users/index.html.erb
+++ b/app/views/batch_users/index.html.erb
@@ -19,6 +19,22 @@
     </div>
     
     <hr/>
+
+    <div class="container">
+        <%= form_tag({action: :upload_token_with_csv, controller: :batch_users, method: 'POST'}, multipart: true, class: 'form-group row') do %>
+            <div class="form-group row">
+                <h3> User Token Batch Upload:</h3>
+            </div>
+            <div class="form-group row">
+                <%= file_field_tag 'csv_file' %>
+            </div>
+            <div class="form-group row">
+                <%= submit_tag 'Upload Batch' , class: 'btn btn-primary' %>
+            </div>
+        <% end %>   
+    </div>
+    
+    <hr/>
     
         <div class="container">
             <%= form_tag({action: :checking_with_csv, controller: :batch_users, method: 'POST'}, multipart: true, class: 'form-group row') do %>
