--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,7 @@
       <th>Carousell user</th>
       <th>Kktown user</th>
       <th>Serial number</th>
+      <th>Token</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= user.carousell_user %></td>
         <td><%= user.kktown_user %></td>
         <td><%= user.serial_number %></td>
+        <td><%= user.token.present? %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
